message CDemoSendTables {
	optional bytes data = 1;
}
